handles multiple blocks

--- a/ui/index.css
+++ b/ui/index.css
@@ -1,3 +1,16 @@
+/* Hide scrollbar for Chrome, Safari and Opera */
+::-webkit-scrollbar {
+    display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+html {
+    scrollbar-width: none; /* For Firefox */
+    -ms-overflow-style: none; /* For Internet Explorer and Edge */
+}
+
+/* */
+
 body {
     background-color: #ffe4c4;
     color: #371f0f;
@@ -9,12 +22,17 @@ body {
 
 .block-container {
     margin: 5% 0 0 0;
-    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .block {
     width: 20%;
-    display: inline-block;
+    margin: 1% 0 1% 0;
+    /* display: inline-block; */
+
+    background-color: rgb(220, 246, 195);
 
     border: 2px solid black;
     border-radius: 5px;
