--- a/ui/index.css
+++ b/ui/index.css
@@ -30,6 +30,7 @@ a:hover {
 
 #header {
     text-align: center;
+    margin: 1% 0 0 0;
 }
 
 .page-header {
@@ -61,6 +62,15 @@ a:hover {
     box-shadow: 10px 10px 0px 0px #C38154;
 
 }
+
+.block-unmined {
+    background: #979797;
+    box-shadow: 10px 10px 0px 0px #181818;
+    color: #000000;
+
+    opacity: 75%;
+}
+
 
 .block-contents {
     text-align: left;
